--- a/LoginAndSignUpWithForgotPasswordExample/src/main/resources/templates/forgotPassword.html
+++ b/LoginAndSignUpWithForgotPasswordExample/src/main/resources/templates/forgotPassword.html
@@ -86,7 +86,7 @@
                 <div th:if="${param.error}" class="error-container">
                   <div class="alert alert-info text-white">Token Expired.Please click on Forgot Password again.</div>
                 </div>
-        <h2>Forgot Password</h2>
+        <h2>To Reset The Old Password Please Enter The valid Email Address</h2>
         <form action="/forgotPassword" method="post">
             <div class="form-group">
                 <label for="email">Email</label>
