--- a/LoginAndSignUpWithForgotPasswordExample/src/main/resources/templates/login.html
+++ b/LoginAndSignUpWithForgotPasswordExample/src/main/resources/templates/login.html
@@ -84,13 +84,16 @@
             </div>
             <button type="submit" class="btn-submit">Login</button>
         </form>
-        <span>Forgot Password? <a href="/" 
-                  th:href="@{/forgotPassword}">
-                                Forgot Password</a></span>
-                                &nbsp;
-                                <span><a href="/" 
+        <span><a href="/" 
                   th:href="@{/register}">
                                 Sign Up</a></span>
+                                
+         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>Reset Password?<a href="/" 
+                  th:href="@{/forgotPassword}">
+                                Forgot Password</a></span>
+                                
+           
     </div>
 </body>
 </html>
