--- a/LoginAndSignUpWithForgotPasswordExample/src/main/resources/templates/userDashboard.html
+++ b/LoginAndSignUpWithForgotPasswordExample/src/main/resources/templates/userDashboard.html
@@ -31,16 +31,21 @@
             text-decoration: none;
             border-radius: 5px;
         }
+        .logOut{
+        	align-items: right;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to the Dashboard</h1>
+         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a id="logOut" href="/logout" class="logout-button">Logout</a>
         <div class="welcome-message">Hello, User!</div>
         <div class="dashboard-content">
             This is your dashboard. You can view and manage your information here.
         </div>
-        <a href="/logout" class="logout-button">Logout</a>
+        
     </div>
 </body>
 </html>
